--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 }
 
 .Todo-App {
-  padding-top: 20px;
+  padding-top: 35px;
   display: inline-block;
   text-align: left;
 }
@@ -49,4 +49,33 @@ ul {
 
 li {
   list-style-type: none;
+}
+
+.message {
+  background-color: #61dafb;
+  color: white;
+  border: 1px solid #61dafb;
+  position: absolute;
+  text-align: center;
+  width: 200px;
+  left: 50%;
+  margin-left: -100px;
+  top: 190px;
+}
+
+li span.delete-item {
+  visibility: hidden;
+}
+
+span.delete-item button {
+  background: none;
+  border: none;
+  font-size: 1em;
+  font-weight: bold;
+  text-decoration: none;
+  color: red;
+}
+
+li:hover span.delete-item {
+  visibility: visible;
 }
